--- a/css/demo.css
+++ b/css/demo.css
@@ -29,3 +29,12 @@ a:hover {
 	overflow: auto;
 	color: #333;
 }
+
+.navbar-inverse {
+background-color: none !important;
+border-color: none !important;
+}
+
+#carousel-inner{
+	background-image: url("img/newportatnight.jpg");
+}
