--- a/carousel.css
+++ b/carousel.css
@@ -50,8 +50,10 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
-  background-color: #777;
-}
+  background-image: url("img/newportatnight.jpg");
+  background-size: cover;
+/*  background-color: #9e2d2d;
+*/}
 .carousel-inner > .item > img {
   position: relative;
   margin: 0 auto;
